[package]
name = "bevy-balls-demo"
version = "0.1.0"
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.bevy]
version = "0.5"

[dependencies.bevy_rapier2d]
version = "0.10"
features = ["enhanced-determinism"]
