[package]
name = "bevy-balls-demo"
version = "0.1.0"
authors = ["Billy Rieger <wrieger@protonmail.com>"]
edition = "2018"
license = "MIT"
publish = false

[dependencies]
bevy = "0.5"
bevy_prototype_lyon = "0.3"
bevy_rapier2d = { version = "0.10", features = ["enhanced-determinism"] }
rapier2d = { version = "0.9", features = ["enhanced-determinism"] }
